# lucie

./: .gitignore  19_Lucie_v1_Aout_2026_Specification.md  BEAUME_SPRINT_PACKAGING_REPORT.md  CHANGELOG.fr.md  CHANGELOG.md  CLAUDE.md  COLLABORATORS_WANTED.fr.md  COLLABORATORS_WANTED.md  CONTRIBUTING.fr.md  CONTRIBUTING.md  KNOWN_ISSUES.fr.md  KNOWN_ISSUES.md  LEGIFRANCE_PROGRESS.md  LICENCES_MODELES.md  LICENSE  LICENSE.md  Makefile  PACKAGING_PROGRESS.md  PERF_OPTIM_PROGRESS.md  PIPELINE_VISIBLE_PROGRESS.md  PRINCIPLES.fr.md  PRINCIPLES.md  PROMPT_FIX_RUNTIME.md  PROMPT_STABILISATION.md  Pyrightconfig   RAPPORT_TEST_UTILISATEUR.md  README.es.md  README.fr.md  README.md  README.md.save  README.zh.md  Readme.en · MD  SECURITY.fr.md  SECURITY.md  _team_bulletin_update.md  config.dev.yaml  fix_all_errors.py  fix_pydantic_imports.py  main.py  main_hud.py  (+6 more)
.github/: repository.yml
Entreprise/: Manifeste_Comportemental_Lucie.md  PRESENTATION_LUCIE.md  enterprise_roadmap.md
assets/: lucie.icns
beaume/: __init__.py
bench/: CHANGELOG.fr.md  CHANGELOG.md  expected_behaviors.json  prompts_lucie_extended.json  run_legal_traps.py  swiss_watch_50.json
demo/: RAPPORT_DEMO.md  lucie-simulation.html  lucie_intro.py
demos/: Actualité_de_l'IA_en_2023.docx  Actualités_et_Résumé_IA_2023.docx  Bonjour.docx  Capture_de_Screenshot.docx  Cour_de_L'Or.docx  Cours_Or.docx  Cours_d'Or.docx  Cours_de_l'Or.docx  Création_automatique_du_document.docx  Fonction_de_l'Agent_d'Accueil.docx  Fonction_du_Rein_sur_le_Corps_et_Autres_Organes.docx  Groupe_de_la_Piraterie.docx  La_France.docx  (+7 more)
(+625 files in other folders)
